truffle/src/com.oracle.truffle.sl.test/src/tests/error/InvalidAssignmentInIfCond.sl
/*
 * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
 * Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 */

function double(x) {
  return 2 * x;
}

function main() {
  if (double(2) = 4) {
    42;
  }
}
